corrección estilo y ejecutivo alerta

--- a/themes/facturacion/sass/components/_box-model.scss
+++ b/themes/facturacion/sass/components/_box-model.scss
@@ -15,6 +15,7 @@
 .margin-bottom-xlarge 		{ margin-bottom: ($box-space/4)*6; } 
 .margin-bottom-xxlarge 		{ margin-bottom: ($box-space/4)*7; }
 .margin-bottom-20 			{ margin-bottom: 20px!important; }
+.margin-bottom-40 			{ margin-bottom: 40px!important; }
 
 .margin-right-xxsmall		{ margin-right: ($box-space/4); }
 .margin-right-xsmall		{ margin-right: ($box-space/4)*2; }
